# target-excel

./: README.md  meltano.yml  pyproject.toml
target_excel/: __init__.py  auth.py  client.py  sinks.py  target.py
tests/: __init__.py  test_core.py
